# datasette-enrichments-gpt

./: README.md  datasette_enrichments_gpt.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
datasette_enrichments_gpt/: __init__.py
datasette_enrichments_gpt/templates/: enrichment-gpt.html
tests/: test_enrichments_gpt.py
tests/cassettes/test_enrichments_gpt/: test_enrichments_gpt.yaml
